fix: make link visible without scroll in notFound page

--- a/my-react-app/src/styles/pages/_not-found.scss
+++ b/my-react-app/src/styles/pages/_not-found.scss
@@ -7,7 +7,7 @@
     h1 {
         @include size-weight(18rem, 700);
         color: $red;
-        margin-bottom: 50px;
+        margin-bottom: 20px;
 
         @include media-tablet {
             font-size: 11.25rem;
@@ -34,12 +34,12 @@
     }
 
     a {
-        @include margin-top-bottom(150px, 150px);
+        @include margin-top-bottom(50px, 120px);
         font-size: 1.125rem;
         text-decoration: underline;
 
         @include media-mobile {
-            @include margin-top-bottom(120px, 120px);
+            @include margin-top-bottom(100px, 100px);
             font-size: 0.875rem;
         }
     }
